--- a/web/thinedgeprofile/package.json
+++ b/web/thinedgeprofile/package.json
@@ -10,9 +10,9 @@
     "postinstall": "ngcc",
     "test": "jest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": ["Cumulocity", "Plugin", "thin-edge"],
+  "author": "Cyril PODER",
+  "license": "Apache",
   "dependencies": {
     "@angular/animations": "14.0.6",
     "@angular/cdk": "14.1.2",
